6-14-23
* check the readme example config for latest schema *
Support multiple minidsp - will get from API automatically
Support specifying slot(s) to use
other speedups and improvements 
use Denon avr to get codec for BEQ profile matching (more accurate than plex)