@@ -4,3 +4,4 @@ Support multiple minidsp - will get from API automatically
 Support specifying slot(s) to use
 other speedups and improvements 
 use Denon avr to get codec for BEQ profile matching (more accurate than plex)
+use both denon and plex to compare codecs, make sure they are playing whats expected. Randomly plex will just decide to transcode atmos because why not
